from objeto import Objeto

class Clicavel(Objeto):
    
	def	m1(self):
		super().m1()

	def	m2(self):
		print('Tem as funcionalidades de um clique.')