class Objeto:
    
    def	m1(self):
	    print('É um objeto')