from objeto import Objeto

class Retangulo(Objeto):
    
	def	m1(self):
		super().m1()

	def	m2(self):
		print('Tem o formato de um retangulo.')